fixed letter spacing for spans; added a.dark

--- a/cssbasics/static/cssbasics/styles.css
+++ b/cssbasics/static/cssbasics/styles.css
@@ -50,6 +50,7 @@ input[type="tel"]:focus, input[type="color"]:focus, .uneditable-input:focus {
     .buttons.small input[type="submit"] { padding: 6px 12px !important;  font-size:11px !important;}
 
     .buttons {padding-bottom: 0px;  letter-spacing: -4px;}
+    .buttons span {letter-spacing: 0px;}
     .buttons.mega a,
     .buttons.mega input[type="submit"] {font-size:17px !important; padding: 16px 22px 16px 22px !important;}
 
@@ -107,7 +108,11 @@ input[type="tel"]:focus, input[type="color"]:focus, .uneditable-input:focus {
      .buttons.dark a,
      .buttons.dark input[type="submit"], 
     .buttons.dark input[type="button"],
-    .buttons.dark button {
+    .buttons.dark button,
+    .buttons a.dark,
+    .buttons input[type="button"].dark,
+    .buttons input[type="submit"].dark,
+    .buttons button.dark  {
         background-image: -moz-linear-gradient(top, #6d8f13, #7ca217);
     background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#6d8f13), to(#7ca217));
     background-image: -webkit-linear-gradient(top, #6d8f13, #7ca217);
